Make the constraints on offer terms correct so that things do not go outside their intended bounds

--- a/app/src/main/res/layout/offer_section_terms.xml
+++ b/app/src/main/res/layout/offer_section_terms.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:background="@color/off_white"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/base_margin_triple">
+    android:paddingBottom="@dimen/base_margin_quadruple">
 
     <ImageView
         android:id="@+id/offer_legal_image"
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/base_margin_double"
+        android:layout_marginTop="@dimen/base_margin_triple"
         android:text="@string/OFFER_TERMS_TITLE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,44 +32,47 @@
     <TextView
         android:id="@+id/noBindingPeriod"
         style="@style/Body.Small"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_triple"
         android:layout_marginTop="@dimen/base_margin"
         android:layout_marginEnd="@dimen/base_margin_triple"
         android:drawableStart="@drawable/ic_filled_checkmark_small"
         android:drawablePadding="@dimen/base_margin_double"
-        android:gravity="center_vertical"
+        android:gravity="center_vertical|start"
         android:text="@string/OFFER_TERMS_NO_BINDING_PERIOD"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/header" />
 
     <TextView
         android:id="@+id/noLimit"
         style="@style/Body.Small"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_triple"
         android:layout_marginTop="@dimen/base_margin"
         android:layout_marginEnd="@dimen/base_margin_triple"
         android:drawableStart="@drawable/ic_filled_checkmark_small"
         android:drawablePadding="@dimen/base_margin_double"
-        android:gravity="center_vertical"
+        android:gravity="center_vertical|start"
         android:text="@string/OFFER_TERMS_NO_COVERAGE_LIMIT"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/noBindingPeriod" />
 
     <TextView
         android:id="@+id/maxCompensation"
         style="@style/Body.Small"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_triple"
         android:layout_marginTop="@dimen/base_margin"
         android:layout_marginEnd="@dimen/base_margin_triple"
         android:drawableStart="@drawable/ic_filled_checkmark_small"
         android:drawablePadding="@dimen/base_margin_double"
-        android:gravity="center_vertical"
+        android:gravity="center_vertical|start"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/noLimit"
         tools:text="@string/OFFER_TERMS_MAX_COMPENSATION" />
@@ -77,14 +80,15 @@
     <TextView
         android:id="@+id/deductible"
         style="@style/Body.Small"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_triple"
         android:layout_marginTop="@dimen/base_margin"
         android:layout_marginEnd="@dimen/base_margin_triple"
         android:drawableStart="@drawable/ic_filled_checkmark_small"
         android:drawablePadding="@dimen/base_margin_double"
-        android:gravity="center_vertical"
+        android:gravity="center_vertical|start"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/maxCompensation"
         tools:text="@string/OFFER_TERMS_DEDUCTIBLE" />
@@ -95,7 +99,7 @@
         android:layout_width="@dimen/terms_icon_size"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_triple"
-        android:layout_marginTop="@dimen/base_margin_double"
+        android:layout_marginTop="@dimen/base_margin_triple"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/ic_presale_information"
         android:drawablePadding="@dimen/base_margin_half"
@@ -112,7 +116,7 @@
         style="@style/Body"
         android:layout_width="@dimen/terms_icon_size"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin_double"
+        android:layout_marginTop="@dimen/base_margin_triple"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/ic_terms"
         android:drawablePadding="@dimen/base_margin_half"
@@ -130,7 +134,7 @@
         style="@style/Body"
         android:layout_width="@dimen/terms_icon_size"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin_double"
+        android:layout_marginTop="@dimen/base_margin_triple"
         android:layout_marginEnd="@dimen/base_margin_triple"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/ic_privacy_policy"
