--- a/app/src/main/res/layout/chat_input_view.xml
+++ b/app/src/main/res/layout/chat_input_view.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:minHeight="@dimen/chat_input_min_height">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/textInputContainer"
@@ -12,14 +11,15 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/base_margin"
         android:orientation="horizontal"
-        android:visibility="gone">
+        android:visibility="gone"
+        tools:visibility="visible">
 
         <ImageView
             android:id="@+id/uploadFile"
             style="?attr/selectableItemBackgroundBorderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|bottom"
+            android:layout_gravity="center_vertical|bottom"
             android:layout_marginStart="@dimen/base_margin_half"
             android:layout_marginEnd="@dimen/base_margin_half"
             android:layout_marginBottom="@dimen/base_margin"
@@ -51,19 +51,19 @@
         -->
         <com.hedvig.app.feature.chat.ChatTextInput
             android:id="@+id/inputText"
+            style="@style/Body.Regular"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/base_margin"
             android:layout_weight="1"
             android:background="@drawable/chat_background_edit_text_rounded_corners"
             android:drawableRight="@drawable/ic_chat_send"
-            android:drawablePadding="@dimen/base_margin_half"
             android:hint="@string/CHAT_TEXT_INPUT_HINT"
             android:imeOptions="actionSend"
-            android:paddingStart="@dimen/base_margin_triple"
-            android:paddingTop="@dimen/base_margin"
-            android:paddingEnd="@dimen/base_margin_double"
-            android:paddingBottom="@dimen/base_margin"
+            android:paddingStart="@dimen/base_margin_double"
+            android:paddingTop="@dimen/chat_text_input_vertical_padding"
+            android:paddingEnd="@dimen/chat_text_input_send_button_offset"
+            android:paddingBottom="@dimen/chat_text_input_vertical_padding"
             tools:ignore="RtlHardcoded" />
 
     </LinearLayout>
@@ -95,6 +95,6 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/base_margin_double"
         android:visibility="gone"
-        tools:visibility="visible" />
+        tools:visibility="gone" />
 
 </FrameLayout>
