--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -133,4 +133,6 @@
     <dimen name="offer_sign_button_off_screen_translation">100dp</dimen>
     <dimen name="offer_switch_bullet_size">40dp</dimen>
     <dimen name="image_upload_corner_radius">20dp</dimen>
+    <dimen name="chat_text_input_vertical_padding">6dp</dimen>
+    <dimen name="chat_text_input_send_button_offset">12dp</dimen>
 </resources>
