--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -62,6 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/off_white"
+        android:paddingBottom="@dimen/base_margin"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@id/input"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout"
