--- a/app/src/main/res/layout/chat_message_user.xml
+++ b/app/src/main/res/layout/chat_message_user.xml
@@ -28,7 +28,10 @@
             android:layout_marginEnd="@dimen/base_margin"
             android:background="@drawable/chat_message_hedvig"
             android:backgroundTint="@color/purple"
-            android:padding="12dp"
+            android:paddingStart="@dimen/base_margin_double"
+            android:paddingTop="@dimen/base_margin"
+            android:paddingEnd="@dimen/base_margin_double"
+            android:paddingBottom="@dimen/base_margin"
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toTopOf="@id/statusMessage"
             app:layout_constraintEnd_toStartOf="@id/editMessage"
