--- a/app/src/main/res/layout/activity_common_claim.xml
+++ b/app/src/main/res/layout/activity_common_claim.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -26,7 +27,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/base_margin"
                 android:layout_marginBottom="@dimen/base_margin_double"
-                android:clipToPadding="false" />
+                android:clipToPadding="false"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:itemCount="3"
+                tools:listitem="@layout/claim_bulletpoint_row" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
