--- a/app/src/main/res/layout/attach_picker_dialog.xml
+++ b/app/src/main/res/layout/attach_picker_dialog.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/attachPickerRoot"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:background="@color/black">
 
     <FrameLayout
         android:id="@+id/attachPickerBottomSheet"
         android:layout_width="match_parent"
         android:layout_height="@dimen/default_attach_file_height"
         android:layout_gravity="bottom"
-        android:background="@color/off_white">
+        android:background="@color/off_white"
+        tools:ignore="UselessParent">
 
         <include layout="@layout/loading_spinner" />
 
@@ -17,7 +21,11 @@
             android:id="@+id/attachFileRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone" />
+            android:orientation="horizontal"
+            android:visibility="gone"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/attach_file_image_item"
+            tools:visibility="visible" />
 
     </FrameLayout>
 </FrameLayout>
