Chat GIF Picker implementation

--- a/app/src/main/res/layout/chat_message_user_giphy.xml
+++ b/app/src/main/res/layout/chat_message_user_giphy.xml
@@ -16,8 +16,9 @@
 
         <ImageView
             android:id="@+id/messageImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:adjustViewBounds="true"
             android:contentDescription="@null"
             tools:scaleType="fitXY"
             tools:src="@drawable/ic_break_in" />
