--- a/app/src/main/res/layout/gif_item.xml
+++ b/app/src/main/res/layout/gif_item.xml
@@ -2,8 +2,8 @@
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/gifImage"
-    android:layout_width="300dp"
-    android:layout_height="300dp"
+    android:layout_width="@dimen/gif_image_size"
+    android:layout_height="@dimen/gif_image_size"
     android:layout_marginStart="@dimen/base_margin"
     android:layout_marginEnd="@dimen/base_margin"
     android:background="?attr/selectableItemBackground"
