--- a/app/src/main/res/layout/chat_message_user.xml
+++ b/app/src/main/res/layout/chat_message_user.xml
@@ -27,12 +27,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginEnd="@dimen/base_margin"
+            android:autoLink="web"
             android:background="@drawable/chat_message_hedvig"
             android:backgroundTint="@color/purple"
+            android:linksClickable="true"
             android:paddingStart="@dimen/base_margin_double"
             android:paddingTop="@dimen/base_margin"
             android:paddingEnd="@dimen/base_margin_double"
             android:paddingBottom="@dimen/base_margin"
+            android:textColorLink="@color/off_white"
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toTopOf="@id/statusMessage"
             app:layout_constraintEnd_toStartOf="@id/editMessage"
