--- a/app/src/main/res/layout/fragment_charity.xml
+++ b/app/src/main/res/layout/fragment_charity.xml
@@ -93,50 +93,41 @@
 
             </LinearLayout>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
                 android:id="@id/selectCharityContainer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 tools:visibility="visible">
 
                 <ImageView
                     android:id="@id/charityIcon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     android:contentDescription="@null"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/icon_charity" />
 
                 <TextView
                     android:id="@id/selectCharityExplainer"
+                    style="@style/Body.Small"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="64dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="@dimen/base_margin"
                     android:layout_marginEnd="64dp"
-                    android:fontFamily="@font/circular_book"
                     android:gravity="center"
-                    android:lineSpacingExtra="6dp"
-                    android:text="@string/PROFILE_CHARITY_PRE_SELECT_DESCRIPTION"
-                    android:textColor="@color/off_black"
-                    android:textSize="14sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/charityIcon" />
+                    android:text="@string/PROFILE_CHARITY_PRE_SELECT_DESCRIPTION" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@id/cashbackOptions"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintTop_toBottomOf="@id/selectCharityExplainer">
+                    android:layout_marginTop="@dimen/base_margin_double"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:itemCount="2"
+                    tools:listitem="@layout/cashback_option">
 
                 </androidx.recyclerview.widget.RecyclerView>
 
@@ -145,12 +136,10 @@
                     layout="@layout/charity_how_does_it_work_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/base_margin_triple"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/selectCharityExplainer" />
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/base_margin_triple" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
