--- a/app/src/main/res/layout/offer_peril_section.xml
+++ b/app/src/main/res/layout/offer_peril_section.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/off_white"
+    android:background="@color/white"
     android:orientation="vertical"
-    android:paddingTop="@dimen/base_margin_quadruple"
     android:paddingBottom="@dimen/base_margin_quadruple">
 
     <ImageView
