--- a/app/src/main/res/layout/offer_section_switch.xml
+++ b/app/src/main/res/layout/offer_section_switch.xml
@@ -5,7 +5,7 @@
     android:id="@+id/switchSection"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/off_white"
+    android:background="@color/white"
     android:orientation="vertical"
     android:paddingTop="@dimen/base_margin_quadruple"
     android:paddingBottom="@dimen/base_margin_quadruple"
