Cut out the last traces of the navigation component
There's nothing left now.

--- a/app/src/main/res/layout/logged_in_screen.xml
+++ b/app/src/main/res/layout/logged_in_screen.xml
@@ -2,10 +2,10 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/loggedInRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="gone"
-    tools:context="com.hedvig.app.feature.loggedin.ui.LoggedInFragment"
     tools:visibility="visible">
 
     <include layout="@layout/app_bar" />
