--- a/app/src/main/res/layout/fragment_trustly.xml
+++ b/app/src/main/res/layout/fragment_trustly.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/off_white"
-    tools:context="com.hedvig.app.feature.profile.ui.payment.TrustlyFragment">
+    tools:context="com.hedvig.app.feature.profile.ui.payment.TrustlyActivity">
 
     <WebView
         android:id="@id/trustlyContainer"
