--- a/app/src/main/res/layout/chat_message_user_image.xml
+++ b/app/src/main/res/layout/chat_message_user_image.xml
@@ -6,13 +6,13 @@
 
     <ImageView
         android:id="@+id/uploadedImage"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/chat_image_size"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:layout_marginTop="@dimen/base_margin"
         android:layout_marginEnd="@dimen/base_margin_double"
-        android:contentDescription="@null"
         android:adjustViewBounds="true"
+        android:contentDescription="@null"
         tools:scaleType="fitXY"
         tools:src="@drawable/ic_break_in" />
 
