--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -138,5 +138,5 @@
     <dimen name="bottom_sheet_handle_height">4dp</dimen>
     <dimen name="bottom_sheet_handle_width">32dp</dimen>
     <dimen name="bottom_sheet_handle_corner_radius">20dp</dimen>
-    <dimen name="gif_image_size">240dp</dimen>
+    <dimen name="chat_image_size">240dp</dimen>
 </resources>
